tests/diagnostics/expressions/operators/comparison_operand_not_int64/expect.txt
# exit: 1
lib.coppice:2:12: error: comparison operators require int64 operands
      return 1 < true
             ^
